# StableFluids

./: .gitmodules  CMakeLists.txt  README.md
Include/: DemoScene.h  FluidCanvas2D.h  Simulation.h
Shaders/: AdvectColor.comp  AdvectVelocity.comp  AutoExposure.comp  CalculateDivergence.comp  CalculatePressure.comp  CopyColors.comp  DeferredPass.frag  Fluid2D.frag  Fluid2D.vert  ForwardPass.vert  Fractals.glsl  Mandelbrot.comp  SimulationCommon.glsl  SimulationUniforms.glsl  UpdateVelocity.comp
Src/: DemoScene.cpp  FluidCanvas2D.cpp  Simulation.cpp  main.cpp
